--- a/public_html/view/permisos/nuevoPermiso.html
+++ b/public_html/view/permisos/nuevoPermiso.html
@@ -76,12 +76,12 @@
                                  
                         <form name="frmremunerado">      
                             <p>
-                        <input name="remuneracion" ng-model="Permiso.remunerado" type="radio" id="SI" checked="false" />
-                        <label for="SI">SI</label>
+                        <input name="remuneracion" ng-model="Permiso.remunerado" type="radio" id="true" checked="false" />
+                        <label for="true">SI</label>
                       </p>
                       <p>
-                        <input name="remuneracion" ng-model="Permiso.remunerado" type="radio" id="NO"  checked="checked"/>
-                        <label for="NO">NO</label>
+                        <input name="remuneracion" ng-model="Permiso.remunerado" type="radio" id="false"  checked="checked"/>
+                        <label for="false">NO</label>
                       </p>   
                         </form>
                           </div>
