--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -142,3 +142,10 @@ label {
     color:#f44336;
     display: inline;
 }
+.btn-improvised{
+    background-color: transparent;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #c3c3c3;
+    border-radius: 2px;
+}
