--- a/public_html/view/index.html
+++ b/public_html/view/index.html
@@ -27,7 +27,7 @@
                         <a style="float:left;margin-top:10px;margin-left:10px;width:40px; height:40px;border-radius:6px;text-align: center;" class="waves-effect waves-light" onclick="abrirMenu();">
                             <i style="line-height:35px;" class="mdi-navigation-menu"></i>
                         </a>  
-                       <a href="#/home"  class="brand-logo" style="margin-left:5px;margin-top: 9px;"><img src="../images/logo.png" width="170px;"></a>
+                       <a href="#/home"  class="brand-logo animated bounceIn" style="margin-left:5px;margin-top: 9px;"><img src="../images/logo.png" width="170px;"></a>
                         <ul id="nav-mobile" class="right hide-on-med-and-down">
                             <li><a href="javascript:;" class="waves-effect waves-light"><i class="material-icons left" style="font-size:18px;">today</i>{{hoy}}</a></li>
                             <li><a href="javascript:;" class="waves-effect waves-light" onclick="cerrarSesion();"><i class="material-icons left" style="font-size:18px;">input</i>Salir</a></li>
