--- a/public_html/view/configuracionHoraria.html
+++ b/public_html/view/configuracionHoraria.html
@@ -11,6 +11,7 @@
                                     <thead>
                                     <th>#</th>
                                     <th>Nombre</th>   
+                                     <th>Tipo de horario</th>   
                                     <th>Hora Entrada</th>
                                     <th>Hora Salida</th>
                                     <th>Editar</th>
