--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -17,7 +17,7 @@ nav ul li:hover{
 .menu{
     width: 220px;margin-top: 60px;box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
- .user{width:100%;height:150px;}
+ .user{width:100%;height:180px;}
  
 .side-nav li {
     color:#676a6c;
@@ -88,7 +88,7 @@ font-size: 14px;
 height:30px;
 padding-left: 10px;
 }
- input[type="text"], input[type="password"], input[type="email"], textarea   {
+ input[type="text"], input[type="password"], input[type="email"], input[type="time"], textarea   {
             padding: 1px;
             margin: 0;
             height:30px;
