--- a/public_html/view/index.html
+++ b/public_html/view/index.html
@@ -78,6 +78,8 @@
                               <div class="collapsible-body" style="background-color: #FFFFFF">
                                 <ul>
                                   <li><a href="#/reporteESarea">E/S por Area</a></li>
+                                  <li><a href="#/ausencias">Ausencias</a></li>
+                                  <li><a href="#/retrasos">Retrasos</a></li>
                                 </ul>
                               </div>
                             </li>
@@ -116,12 +118,16 @@
         <script src="../scripts/controllers/configuracionController.js" type="text/javascript"></script>
         <script src="../scripts/controllers/ESareaController.js" type="text/javascript"></script>
         <script src="../scripts/controllers/permisosController.js" type="text/javascript"></script>
+        <script src="../scripts/controllers/ausenciaController.js" type="text/javascript"></script>
+        <script src="../scripts/controllers/retrasosController.js" type="text/javascript"></script>
          <!--Service--->
          <script src="../scripts/services/areaService.js" type="text/javascript"></script>
           <script src="../scripts/services/empleadoService.js" type="text/javascript"></script>
           <script src="../scripts/services/permisosService.js" type="text/javascript"></script>
           <script src="../scripts/services/horariosService.js" type="text/javascript"></script>
           <script src="../scripts/services/reportesService.js" type="text/javascript"></script>
+          <script src="../scripts/services/ausenciaService.js" type="text/javascript"></script>
+          <script src="../scripts/services/retrasosService.js" type="text/javascript"></script>
         <script>
 
 
