--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -88,7 +88,7 @@ font-size: 14px;
 height:30px;
 padding-left: 10px;
 }
- input[type="text"], input[type="password"], input[type="email"], input[type="time"], textarea   {
+ input[type="text"], input[type="password"], input[type="email"], input[type="time"], textarea,input[type="number"]   {
             padding: 1px;
             margin: 0;
             height:30px;
@@ -148,4 +148,14 @@ label {
     height: 20px;
     border: 2px solid #c3c3c3;
     border-radius: 2px;
+}
+
+.bage{
+   background-color:#c62828;
+   color:#FFFFFF;
+   padding:3px;
+   border-radius:5px;
+   font-weight:900;
+   font-size:11px;
+   padding-left:6px;padding-right:6px;
 }
