--- a/public_html/view/index.html
+++ b/public_html/view/index.html
@@ -6,7 +6,7 @@
         <title>Camara De Comercio - Valledupar</title> 
         <link href="../css/materialize.css" rel="stylesheet"/>
         <link href="../css/animate.css" rel="stylesheet">
-       
+           <link href="../css/sweetalert.css" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="../css/style.css" rel="stylesheet"/>
         <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
@@ -105,6 +105,7 @@
         }
             </script>
         <script src="../js/jquery/jquery-2.1.1.min.js"></script>
+        <script src="../js/sweetalert.min.js" type="text/javascript"></script>
         <script src="../js/materialize.js" type="text/javascript"></script>
         <script src="../js/angular/angular.js"></script>
         <script src="../js/angular/angular-route.js" type="text/javascript"></script>
